# product-image-generator

./: .gitignore  README.md
backend/: config.py  database.py  main.py  models.py  pyproject.toml
backend/services/: gemini_service.py  generator.py  imagekit_service.py
pydantic-practice/: pyproject.toml
pydantic-practice/foundations/: fast-api-example.py  fields-model.py  first-model.py  model-behaviour.py  nested-model.py  serialization.py  typing-examples.py
