[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "google-genai>=1.74.0",
    "httpx==0.28.1",
    "imagekitio==5.0.0",
    "pillow>=12.2.0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "sqlmodel==0.0.24",
    "uvicorn==0.34.2",
]
